--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="title_activity_focus">FocusActivity</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- used in homepage -->
+    <string name="start_rest">START REST</string>
+    <string name="ins_after_rest">Finish your rest whenever you want!</string>
+    <string name="stop_rest">FINISH REST</string>
+    <string name="set_relax">Please set your relax time!</string>
+    <string name="set_focus">Please set your focus time!</string>
+    <string name="start_focus">START FOCUS</string>
+
+    <!--    <string name="shared_preference">com.example.myapplication</string> -->
 </resources>
