--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,21 @@
     <string name="set_focus">Please set your focus time!</string>
     <string name="start_focus">START FOCUS</string>
 
+    <string name="default_time_section_name">Default time management</string>
+    <string name="settings_default_relax_time">Relax time</string>
+    <string name="default_relax_time_summary">Set a default relax time</string>
+    <string name="settings_default_focus_time">Focus time</string>
+    <string name="default_focus_time_summary">Set a default focus time</string>
+    <string name="settings_default_snooze_time">Snooze time</string>
+    <string name="default_snooze_time_summary">Set a default snooze time</string>
+    <string name="access_management_section_name">Access management</string>
+    <string name="access_management_summary">Please whitelist the accessible apps during your focus time.</string>
+    <string name="motivational_msg_section_name">Motivational message</string>
+    <string name="motivational_msg_summary">Please set a motivation for yourself.</string>
+
+
+    <string name="motivational_msg_popup_ins">Customize motivational messages here.</string>
+    <string name="cancel">CANCEL</string>
+    <string name="ok">OK</string>
     <!--    <string name="shared_preference">com.example.myapplication</string> -->
 </resources>
