--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="focus_warning">Phone Locked \n Don\'t be a slave to your phone!</string>
+    <string name="force_exit_confirm_quit">Confirm Quit</string>
     <!--    <string name="shared_preference">com.example.myapplication</string> -->
 </resources>
