--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,16 @@
 
 
     <string name="motivational_msg_popup_ins">Customize motivational messages here.</string>
-    <string name="cancel">CANCEL</string>
     <string name="ok">OK</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="focus_warning">Phone Locked \n Don\'t be a slave to your phone!</string>
     <string name="force_exit_confirm_quit">Confirm Quit</string>
+    <string name="exit_focus">Exit</string>
+    <string name="whitelist">Whitelist</string>
+    <string name="save">Save</string>
+    <string name="home">Home</string>
+    <string name="minute">min</string>
+    <string name="settings">Settings</string>
     <!--    <string name="shared_preference">com.example.myapplication</string> -->
 </resources>
